--- a/CLIENT/style/style.css
+++ b/CLIENT/style/style.css
@@ -17,7 +17,8 @@ a
     text-decoration: none;
 }
 
-a img {
+a img 
+{
     border: none;
 }
   
@@ -63,13 +64,14 @@ select
     --primary: #FF2775;
     --secondary: #00E9D4;
     --yellow: #FFEE33;
+    --overlay: rgba(25, 30, 35, 0.30);
 
     /* COLOR */
 
-    /* FONT */
 
-    --fs-xxl: clamp(7rem, 12vw, 12rem);
-    --fs-xl: clamp(5rem, -0.875rem + 8.333vw, 7.2rem);
+    /* FONT */
+    --fs-xxl: clamp(11rem, 10.7692rem + 1.0256vw, 12rem);
+    --fs-xl: clamp(6.5rem, 6.5rem + 0vw, 6.5rem);;
     --fs-l: clamp(2.9rem, calc(-1.16rem + 4.5vw), 3.6rem);
     --fs-md: clamp(3.2rem, calc(-1.16rem + 7.95vw), 4.8rem);
     --fs-s: clamp(1.6rem);
@@ -88,46 +90,65 @@ p
     line-height: 1.5em;
 }
 
-.article-section p
+/* ----- HERO FONT CSS -----*/
+
+.hero-section h1, 
+.hero-section h1 span
 {
-    font-size: 2.4rem;
+    font-size: clamp(8rem, 7.0769rem + 2.1026vw, 12rem);
 }
 
-h1
+.hero-section h1 span
 {
-    font-size: var(--fs-xl);
-}
-
-h1 span
-{
-    font-size: var(--fs-xl);
     color: var(--primary);
 }
 
-h1 span:last-child
+.hero-section h2, .hero-section h2 span
 {
-    color: var(--secondary);
+    font-size: clamp(5rem, 4.5154rem + 2.1538vw, 7.2rem);
+    line-height: 8rem;
+    margin-bottom: 30px;
 }
 
-h2
+.hero-section h2 span
 {
-    font-size: var(--fs-md);
-    margin-bottom: 20px;
+    color: var(--secondary)
 }
 
-h2 span
+.hero-section h3, .offer-section .offer-left h3
 {
-    font-size: var(--fs-md);
+    font-size: clamp(2.9rem, 2. 462rem + 1.1282vw, 4rem);
+    font-weight: 200;
+}
+
+.hero-section .hero-left  .hero-contact div a
+{
+    font-size: 2rem;
+}
+
+/* ----- HERO FONT CSS -----*/
+
+
+/* ----- ICEBREAKER FONT CSS -----*/
+
+.icebreaker-section h2,
+.icebreaker-section h2 span
+{
+    font-size: clamp(5.1rem, 4.9385rem + 0.7179vw, 5.8rem);
+    margin-bottom: 30px;
+}
+
+.icebreaker-section h2 span
+{
     color: var(--primary);
 }
-.offer-section h2 span
-{
-    color: var(--secondary);
-}
+
+/* ----- ICEBREAKER FONT CSS -----*/
 
 h3
 {
     font-size: var(--fs-l);
+    font-weight: 200;
 }
 
 h4
@@ -142,12 +163,84 @@ h5
     font-weight: 600;
 }
 
+.article-section p
+{
+    font-size: 2.4rem;
+}
+
 .article-section div ul li,
 .offer-text ul li
 {
     font-size: 3.6rem;
     font-weight: 400;
 }
+
+.offer-section .offer-left h4
+{
+    font-size: 6.5rem;
+}
+
+
+.offer-section .offer-left h2
+{
+    color: var(--secondary);
+    font-size: var(--fs-xxl);
+    font-size: 11rem;
+    line-height: 10rem;
+    margin-bottom: 30px;
+}
+
+.offer-section .offer-left ul
+{
+    margin-top: 30px;
+}
+
+.offer-section .offer-left ul li
+{
+    font-size: 2.5rem;
+    font-weight: 200;
+    display: flex;
+    align-items: center;
+    line-height: 2rem;
+    margin-bottom: 15px;
+}
+
+.offer-section .offer-left ul li:last-child
+{
+    margin-bottom: 0px;
+}
+
+
+.offer-section .offer-left ul li::before
+{
+    content: url(../images/checkmark.png);
+    width: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+}
+
+
+/* ----- FOOTER FONT CSS -----*/
+
+footer section div h3
+{
+    font-size: 3rem;
+    font-weight: 600;
+    margin-bottom: 2rem;
+}
+
+footer section div ul li
+{
+    font-size: 2rem;
+    font-weight: 300;
+    line-height: 3rem;
+    padding: 5px 0px;
+}
+
+
+/* ----- FOOTER FONT CSS -----*/
 
 
 /* FONT CSS PROPERTIES */
@@ -169,7 +262,7 @@ body
 .primary-button
 {
     position: relative;
-    font-size: 24px;
+    font-size: 2.4rem;
     font-weight: 600;
     text-transform: uppercase;
     border: 1px solid var(--primary);
@@ -181,14 +274,16 @@ body
 .secondary-button
 {
     background-color: var(--darkgray);
-    position: relative;
-    font-size: 1.8rem;
+    width: 100%;
+    font-size: 2.4rem;
     font-weight: 600;
-    text-transform: uppercase;
     text-align: center;
     border: 1px solid var(--primary);
     border-radius: 5px;
     padding: 10px 20px;
+    margin: 10px;
+    transition: transform 800ms;
+    z-index: 1;
 }
 
 
@@ -203,17 +298,21 @@ img
 
 /* LAYOUT CSS PROPERTIES */
 
+header
+{
+    margin-bottom: 100px;
+}
+
 section
 {
-    width: 95%;
+    width: 90%;
     max-width: 1140px;
-    padding: 10px;
-    margin: 100px auto
+    margin: 150px auto
 }
 
 section:first-child
 {
-    margin-top: 0px;
+    margin: 0px auto;
 }
 
 /* LAYOUT CSS PROPERTIES */
@@ -222,17 +321,16 @@ section:first-child
 
 header
 {
-    margin-top: 25px;
+    background-color: var(--lightgray);
 }
 
 .header-section
 {
-    background-color: var(--lightgray);
+
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
-    border-radius: 10px;
+    padding: 20px 0px;
 }
 
 .header-section .primary-button
@@ -263,11 +361,6 @@ header
 
 /* HERO SECTION */
 
-.hero-section div h1,
-.hero-section div h3
-{
-    padding-bottom: 30px;
-}
 
 
 .hero-section div img
@@ -276,22 +369,21 @@ header
     height: auto;
 }
 
-
-.hero-section div:last-child
+.hero-section .hero-left .hero-contact
 {
-    position: relative;
+    margin-top: 30px;
+}
+.hero-section .hero-left .hero-contact div
+{
+    background-color: var(--lightgray);
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 10px;
+    border-radius: 5px;
 }
 
 
-.hero-section div .creative-tools
-{
-    width: 100%;
-    display: flex;
-    justify-content: flex-start;
-}
 
 /* ICEBREAKER SECTION */
 
@@ -311,7 +403,7 @@ header
 {
     position: absolute;
     right: 0;
-    transform: rotate(-15deg);
+    transform: rotate(-10deg);
 }
 
 .icebreaker-section p
@@ -319,154 +411,147 @@ header
     font-size: 2.4rem;
 }
 
+
+
 /* ICEBREAKER SECTION */
 
 /* OFFER SECTION */
 
 
-
-.offer-section h2
+.offer-section .offer-right .offer-card
 {
-    color: var(--secondary);
-    font-size: var(--fs-xxl);
+    border-radius: 5px;
     position: relative;
-}
-
-.offer-section h2:before
-{
-    content: 'The Ultimate';
-    position: absolute;
-    color: var(--white);
-    top: -50px;
-    left: 0px;
-    font-size: var(--fs-xl);
-    font-weight: 700;
-}
-
-.offer-section
-{
-    display: flex;
-    gap: 8rem;
-}
-
-.offer-section .offer-text
-{
-    width: 40%;
-}
-
-.offer-section .offer-card-wrapper
-{
-    flex-grow: 1;
-    display: grid;
-    gap: 3rem;
-    grid-template-columns: repeat(2fr, auto);
-    grid-template-areas: 
-        "left ."
-        "left .";
-}
-
-.offer-section .offer-card-wrapper .offer-card
-{
-    border-radius: .5rem;
-    padding: 1rem;
     display: flex;
     justify-content: center;
     align-items: flex-end;
+
 }
 
-.offer-section .offer-card-wrapper .offer-card:first-child
+
+.offer-section .offer-right .offer-card::before
 {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: var(--overlay);
+}
+
+
+.offer-section .offer-right .card-1,
+.offer-section .offer-right .card-2,
+.offer-section .offer-right .card-3
+{
+    background-image: url(../images/premium-photography.png);
+    background-size: 150%;
+    background-position: center;
+    background-blend-mode: overlay;
+    transition: background-size 800ms;
+}
+
+.offer-section .offer-right .offer-card:hover
+{
+    background-size: 160%;
+}
+
+.offer-section .offer-right .offer-card:hover .secondary-button
+{
+    transform: translateY(-10px);
+}
+
+
+@media only screen and (max-width: 768px)
+{
+    .offer-section .offer-right
+    {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-top: 30px;
+    }
+    .offer-section .offer-right .offer-card
+    {
+        height: 280px;
+        width: 280px;
+        margin-bottom: 30px;
+    }
+    .offer-section .offer-right .offer-card::after
+    {
+        content: "1";
+        background-color: var(--primary);
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        top: -20px;
+        left: -20px;
+        font-size: 3rem;
+        font-weight: 600;
+        border-radius: 5px;
+    }
+
+}
+
+
+
+@media only screen and (min-width: 768px) and (max-width: 1100px)
+{
+    .offer-section .offer-right
+    {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 3rem;
+    }
+    .offer-section .offer-card
+    {
+        flex: 1 1 auto;
+        width: 300px;
+        height: 300px;
+    }
+
+}
+
+
+@media only screen and (min-width: 1100px)
+{
+    .offer-section
+    {
+        display: flex;
+        gap: 5rem;
+    }
+    .offer-section .offer-left
+    {
+        width:45%;
+    }
+    
+    .offer-section .offer-right
+    {
+        flex-grow: 1;
+    }
+    .offer-section .offer-right
+    {
+    display: grid;
+    gap: 3rem;
+    grid-template-columns: repeat(2, auto);
+    grid-template-areas:
+        "left ."
+        "left ."
+    }
+    .offer-section .offer-right .card-1
+    {
     grid-area: left;
-    background-image: url(../images/premium-photography.png);
-    background-position: ;
-    background-size: 150%;
-}
-
-.offer-section .offer-card-wrapper .card-2
-{
-    background-image: url(../images/premium-photography.png);
-    background-size: 150%;
-}
-
-.offer-section .offer-card-wrapper .card-3
-{
-    background-image: url(../images/premium-photography.png);
-    background-size: 150%;
-}
-
-
-/* 
-.offer-section .offer-card-wrapper .offer-card
-{
-    background-color: var(--lightgray);
-    padding: 25px;
-    margin-bottom: 20px;
-    border-radius: 5px;
-}
-
-.offer-section .offer-card-wrapper .offer-card div
-{
-    width: fit-content;
-    background-color: var(--primary);
-    padding: 5px;
-    border-radius: 3px;
-}
-
-.offer-section .offer-card-wrapper .offer-card h4
-{
-    margin: 15px 0px;
-}
-
-.offer-section .offer-gift-wrapper
-{
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    height: 50px;
-}
-
-.offer-section .offer-gift-wrapper .gift-wrapper
-{
-    background-color: white;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    height: 50px;
-    padding: 0px 10px;
+    }
 
 }
 
-.offer-section .offer-gift-wrapper #giftWrapper .gift-card
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    padding: 0px 10px;
-}
 
-.close
-{
-    display: none!important;
-}
-
-.offer-section .offer-gift-wrapper button
-{
-    display: flex;
-    align-items: center;
-    background-color: var(--white);
-    height: 50px;
-    border-radius: 3px;
-    padding: 10px;
-}
-
-.offer-section .offer-gift-wrapper h5
-{
-    color: var(--lightgray);
-    margin-left: 10px;
-    text-align: left;
-    text-transform: uppercase;
-} */
 
 /* ARTICLE SECTION */
 
@@ -519,72 +604,68 @@ header
     flex-direction: column;
 }
 
-.contact-section div span:first-child
-{
-    position: absolute;
-    top: 75px;
-    left: 30px;
-    font-size: 4.8rem;
-    font-weight: 600;
-}
-
-.contact-section div span:nth-child(2)
-{
-    color: var(--primary);
-    position: absolute;
-    bottom: 350px;
-    right: 170px;
-    font-size: 4.8rem;
-    font-weight: 600;
-}
 
 
-.contact-section .contact-section-form
-{
-    width: 50%;
-}
+
 
 .contact-section form
 {
     background-color: var(--lightgray);
-    width: 100%;
+    padding: 2rem;
+    border-radius: 4px;
 }
 
-.contact-section form .form-name
+.contact-section form .form-group
 {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-direction: row;
-    gap: 10px;
+    gap: 2rem;
     width: 100%;
+    margin-top: 1rem;
 }
 
 
 
-.contact-section form .form-name label
+.contact-section form .form-group label
 {
     color: var(--white);
     width: 100%;
     font-size: 2.4rem;
 }
 
-.contact-section form input
+.contact-section form input,
+.contact-section form select
 {
     background-color: #20262e;
     color: var(--white);
+    width: 100%;
     font-size: 1.8rem;
-    padding: 10px;
+    font-weight: 300;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    padding: 1rem;
     margin-top: 5px;
     width: 100%;
+    transition: transform 800ms;
+}
+
+
+.contact-section form input:focus
+{
+    border: 1px solid var(--primary);
+    transition: all .3s ease-in-out;
 }
 
 
 
 
-@media only screen and (min-width: 768px)
+@media only screen and (min-width: 1100px)
 {
-    .hero-section, .article-section, .contact-section
+    .hero-section, 
+    .article-section, 
+    .contact-section
     {
         display: flex;
     }
@@ -595,10 +676,30 @@ header
     {
         width: 50%;
     }
-/*     .offer-section .offer-card-wrapper
+
+}
+
+/* FOOTER SECTION */
+
+
+footer
+{
+    background-color: var(--lightgray);
+    padding: 5rem 0rem;
+    min-height: 500px;
+}
+
+
+
+@media only screen and (min-width: 1100px)
+{
+    footer section
     {
         display: flex;
-        gap: 20px;
-    } */
-
+        gap: 2rem;
+    }
+    footer section div
+    {   
+        flex: 20%;
+    }
 }
