--- a/CLIENT/style/style.css
+++ b/CLIENT/style/style.css
@@ -361,26 +361,17 @@ header
 
 /* HERO SECTION */
 
-
-
-.hero-section div img
+.hero-section
 {
-    max-width: 100%;
-    height: auto;
+    text-align: center;
 }
 
-.hero-section .hero-left .hero-contact
+.hero-section-buttons
 {
-    margin-top: 30px;
-}
-.hero-section .hero-left .hero-contact div
-{
-    background-color: var(--lightgray);
     display: flex;
     justify-content: center;
-    flex-direction: column;
-    padding: 10px;
-    border-radius: 5px;
+    align-items: ;
+    gap: 10px;
 }
 
 
@@ -663,13 +654,11 @@ header
 
 @media only screen and (min-width: 1100px)
 {
-    .hero-section, 
     .article-section, 
     .contact-section
     {
         display: flex;
     }
-    .hero-section div,
     .icebreaker-section div,
     .article-section div,
     .contact-section div
