--- a/CLIENT/style/style.css
+++ b/CLIENT/style/style.css
@@ -236,7 +236,26 @@ footer section h2
     margin: 3rem 0rem;
 }
 
+.personal-section .personal-right h3
+{
+    margin-bottom: 6rem;
+}
 
+.personal-section .personal-right p
+{
+    margin-bottom: 3rem;
+}
+
+/* SERVICES FONT CSS */
+
+.services-section .services-left h3
+{
+    margin-bottom: 5rem;
+}
+.services-section .services-left p
+{
+    margin-bottom: 3rem;
+}
 
 /* SERVICES FONT CSS */
 
@@ -274,7 +293,7 @@ footer section h2
     font-weight: 200;
     line-height: 2rem;
     margin-bottom: 15px;
-    margin-left: 30px;
+    margin-left: 35px;
 }
 
 .offer-section .offer-left ul li:last-child
@@ -323,6 +342,7 @@ footer section div ul li
     line-height: 3rem;
     padding: 5px 5px;
     margin-left: 15px;
+    cursor: pointer;
 }
 
 footer section div ul li::before
@@ -453,7 +473,7 @@ section
     position: relative;
     width: 90%;
     max-width: 1140px;
-    margin: 5rem auto;
+    margin: 10rem auto;
     scroll-margin-top: 15rem;
 }
 
@@ -741,7 +761,7 @@ header
 }
 
 
-.bridge-section button
+.bridge-section .bridge-left a
 {
     margin-top: 0rem;    
 }
@@ -1095,12 +1115,16 @@ header
 
 @media only screen and (max-width: 480px)
 {
+    .hero-section
+    {
+        margin-top: 12rem;
+    }
     .hero-section-buttons
     {
         flex-direction: column;
         gap: 3rem;
     }
-    .hero-section-buttons button:last-child
+    .hero-section-buttons a:last-child
     {
         margin-top: 0rem;
     }
@@ -1129,7 +1153,13 @@ header
 footer
 {
     background-color: var(--lightgray);
-    padding: 5rem auto;
+    
+}
+
+footer section
+{
+    padding: 5rem 0rem;
+    margin-bottom: 0rem;
 }
 
 @media only screen and (min-width: 1100px)
